--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Website</title>
+    <title>Is This Honors?</title>
     <style>
         body {
             margin: 0;
@@ -53,13 +53,13 @@
 <body>
 
     <header>
-        <h1 id="welcome">Welcome</h1>
+        <h1 id="Is It Honors?">Welcome</h1>
         <div id="yellow-strip"></div>
     </header>
 
     <div id="main-area">
         <div>
-            Notice! This is a prototype version.
+            Notice! This is a prototype version and does not work for all classes.
         </div>
         <div>
             <label for="inputLetters">Enter 3 capital letters:</label>
