--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 }
             }
                 
-            resultElement.innerHTML = '<p class="red">Inputs are not valid.</p>';
+            resultElement.innerHTML = '<p class="red">Inputs are not valid, class has not been added, or class is not Honors.</p>';
         }
     </script>
 
