--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body {
             margin: 0;
             font-family: Arial, sans-serif;
-            background-color: #add8e6; /* Baby blue */
+            background-color: #69B3e7; /* Baby blue */
         }
 
         header {
@@ -23,7 +23,7 @@
 
         #yellow-strip {
             height: 5px;
-            background-color: yellow;
+            background-color: #ffc72c;
             margin-bottom: 20px;
         }
 
