--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
                 const specificClassesLetters = ['BUS','BIO','SPM'];
                 const specificClassesNumbers = ['401','193','366'];
 
-                if ((letters2122.includes(inputLetters) && (inputNumbers=="21" || inputNumbers=="22"))) {
+                if ((letters2122.includes(inputLetters) && (inputNumbers=="21" || inputNumbers=="22")) || inputLetters=='HSM' || inputLetters=='HHE') {
                     displayClass(true)
                     return;
                 } 
