--- a/index.html
+++ b/index.html
@@ -595,6 +595,7 @@
                 {"Subject" : "WLT",	 "Catalog":"386"},
                 {"Subject" : "WLT",	 "Catalog":"390"},
             ]
+            campus = 'BK';
             displayTable(HONORSBK,'Brooklyn');
         }
         
